--- a/framework/css/main.css
+++ b/framework/css/main.css
@@ -1,5 +1,5 @@
 * {
-  outline: 1px solid red !important;
+  /*outline: 1px solid red !important;*/
 }
 
 * {
@@ -7,17 +7,16 @@
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
+  font-family: 'Work Sans', sans-serif;
+  color: #747704;
 }
 
 @media only screen and (max-width: 300px) {
-  p {
-    background-color: blue;
-  }
 }
 
 .grid {
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 1000px;
   width: 100%;
 }
 
@@ -75,6 +74,47 @@
   width: 100%;
 }
 
-h1 {
-  color: blue;
+#header-title {
+  border-bottom: 4px solid #bcbbbb;
+  margin-top: 20px;
+}
+
+#header-title h1 {
+  margin: 0px;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 100;
+  font-size: 60px;
+  color: black;
+  text-transform: uppercase;
+}
+
+#header-title h3 {
+  margin: 0px;
+  padding-bottom: 20px;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 300;
+  font-size: 22px;
+  color: black;
+  text-transform: uppercase;
+}
+
+#header-sub h2 {
+  margin: 0px;
+  padding: 0px 0px 10px 10px;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 300;
+  font-size: 36px;
+  color: #aaa;
+}
+
+#splash {
+  margin: 30px 0px;
+}
+
+#featured h3 {
+  margin: 0px;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 300;
+  font-size: 32px;
+  text-transform: uppercase;
 }
